--- a/kredyt_01/src/main/webapp/index.xhtml
+++ b/kredyt_01/src/main/webapp/index.xhtml
@@ -5,13 +5,13 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
-<h:head>
-	<title>Kredyt</title>
-</h:head>
-<h:body>
-	
-	<p:panel header="Kredyt" style="margin: 1em auto" toggleable="true" closable="true" toggleSpeed="300">
 
+<ui:composition template="/templates/page-template.xhtml">
+
+	<ui:define name="pageContent">
+	<p:panel header="Kalkulator Kredytowy">
+
+	<p:messages id="msg" />
 	<h:form id="bla">
 		<h:panelGrid id="grid" columns="3" cellpadding="5">
 		
@@ -37,8 +37,11 @@
 		<br />	
 		</h:panelGrid>
 		<p:growl id="msg" />
+		
 	</h:form>
-	</p:panel>
 	
-</h:body>
+	</p:panel>
+	</ui:define>
+
+</ui:composition>
 </html>
