--- a/kredyt_01/src/main/webapp/showresult.xhtml
+++ b/kredyt_01/src/main/webapp/showresult.xhtml
@@ -5,14 +5,19 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
-<h:head>
-	<title>Wynik</title>
-</h:head>
-<h:body>
-	<h:messages />
+
+<ui:composition template="/templates/page-template.xhtml">
+
+	<ui:define name="pageContent">
+	<p:panel header="Wynik">
+
+	<p:messages id="msg" />
 	Miesieczna opłata: #{kredytBB.wynik}
 	<h:form>
 		<p:commandButton value="Powrót" action="index" />
 	</h:form>
-</h:body>
+	</p:panel>
+	</ui:define>
+
+</ui:composition>
 </html>
